[package]
name = "mobilitydb-duckdb-bridge"
version = "0.1.0"
edition = "2021"
description = "Generated DuckDB extension that bridges the mobilitydb DataFission shim into DuckDB."
license = "Apache-2.0"

[lib]
name = "mobilitydb_duckdb_bridge"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Path-deps into the source DataFission tree so we can call the
# loader's wasm scalar-invoke surface directly. Move to git-deps
# when DataFission ships releases.
datafission-df-plugin-loader = { path = "../datafission/crates/df-plugin-loader" }
datafission-df-plugin-api    = { path = "../datafission/crates/df-plugin-api" }
datafission-functions        = { path = "../datafission/crates/functions" }

# Stock duckdb-rs from crates.io. We use it for the typed
# `Connection` + `VScalar` trait (scalar dispatch). The
# aggregate / custom-type registration paths go directly
# through `libduckdb-sys` raw FFI — duckdb-rs doesn't surface
# those APIs in its safe wrapper but the C ABI is fully
# accessible via libduckdb-sys (a re-export of libduckdb-sys's
# `loadable-extension` feature).
duckdb         = { version = "~1.10504", features = ["vscalar", "loadable-extension"] }
libduckdb-sys  = { version = "~1.10504", features = ["loadable-extension"] }

anyhow      = "1"
once_cell   = "1"
parking_lot = "0.12"
tracing     = "0.1"
serde_json  = "1"

[profile.release]
lto         = true
codegen-units = 1
opt-level   = "z"
strip       = true
